deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bms-deployment
  labels:
    app: bms

spec:
  replicas: 2

  selector:
    matchLabels:
      app: bms

  template:
    metadata:
      labels:
        app: bms

    spec:
      containers:
      - name: bms-container
        image: vipparlasandeepcharan/bms:v2

        ports:
        - containerPort: 3000

        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"

          limits:
            memory: "512Mi"
            cpu: "500m"

        readinessProbe:
          httpGet:
            path: /
            port: 3000

          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /
            port: 3000

          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
