service.yaml
apiVersion: v1
kind: Service

metadata:
  name: bms-service

spec:
  type: ClusterIP

  selector:
    app: bms

  ports:
    - port: 80
      targetPort: 80
