grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana-ingress

spec:
  ingressClassName: traefik

  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix

        backend:
          service:
            name: monitoring-grafana

            port:
              number: 80
