ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: bms-ingress
  namespace: bms-prod

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: bms-service
            port:
              number: 80
